@@ -116,15 +116,15 @@ if ($access)
 		}
 
 		#Fill Additional Editors (kind of kludgy)
-		$addtarray = array();
 		if (isset($_POST["additional_editors"]))
 		{
+			$addtarray = array();
 			foreach ($_POST["additional_editors"] as $addt_user_id)
 			{
 				array_push($addtarray, $addt_user_id);
 			}
+			$contentobj->SetAdditionalEditors($addtarray);
 		}
-		$contentobj->SetAdditionalEditors($addtarray);
 
 		if ($error === FALSE)
 		{
@@ -157,15 +157,15 @@ if ($access)
 		}
 
 		#Fill Additional Editors (kind of kludgy)
-		$addtarray = array();
 		if (isset($_POST["additional_editors"]))
 		{
+			$addtarray = array();
 			foreach ($_POST["additional_editors"] as $addt_user_id)
 			{
 				array_push($addtarray, $addt_user_id);
 			}
+			$contentobj->SetAdditionalEditors($addtarray);
 		}
-		$contentobj->SetAdditionalEditors($addtarray);
 	}
 }
 
